--- a/src/index.sass
+++ b/src/index.sass
@@ -1,9 +1,5 @@
-@import './fonts/font.css';
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;800;900&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;500;600;700&display=swap');
-
 h1, h2, h3, h4, h5, h6 
-  font-family: 'GT Walsheim Pro' !important
+  font-family: 'Inter', sans-serif
   font-weight: 900 
   font-style: normal
 
