font style and type updated

--- a/src/App.sass
+++ b/src/App.sass
@@ -141,10 +141,12 @@ svg
 .home 
     padding-top: 100px
     margin-bottom: 50px
+    @media only screen and (min-width: 927px)
+        height: 779px
     .row
         padding: 50px 0
         @media only screen and (max-width: 927px)
-            padding-top: 100px
+            padding-top: 110px
     color: #110F16
     .header-text
         position: relative
@@ -152,6 +154,7 @@ svg
         align-items: center
         @media only screen and (max-width: 927px)
             flex: 0 0 100%
+            margin-bottom: 30px
         div
             position: absolute
             right: 35px
